--- a/style.css
+++ b/style.css
@@ -99,9 +99,9 @@ section.topo-do-site.flex{
 
 }
 .img-topo-site img{
-    padding: 20; /* Remova ou ajuste o padding conforme necessário */
-    width: 350px; /* Ajuste a largura da imagem */
-    height: 350px; /* Ajuste a altura da imagem */
+    padding: 20; 
+    width: 350px; 
+    height: 350px;
     float: right;
     margin-top: -90px;
     position: relative;
