--- a/style.css
+++ b/style.css
@@ -6,10 +6,12 @@
     font-family: 'Poppins', sans-serif;
 }
 body{
-    background-color: rgb(15, 15, 15);
-    height: 100vh;
-    width: 150;
+    background-color: rgb(12, 12, 12);
+    height: 100%;
+    width: 100%;
 }
+
+
 .interface{
     max-width: 1280px;
     margin: 0 auto;
@@ -231,13 +233,18 @@ section.sobre{
     box-shadow: 0px 0px 20px #7b31db;
     cursor: pointer;
 }
-/* Container zoom */
-.container {
-    transform: scale(1.2);
-    transform-origin: 0 0;
-}
+
 /* ESTILO PORTFÓLIO */
 section.portfolio{
-    padding: 80px 4%;
-    box-shadow: 0 0 40px 10 px rgba(255, 255, 255, 0.384);
+ padding: 80px;
+ box-shadow: 0 0 40px 10px rgba(255, 255, 255, 0.219);
+    
+}
+section.portfolio .flex{
+    justify-content: space-around;
+}
+.img-port{
+    width: 360px;
+    height: 460px;
+    background-color: #7b31db;
 }
