--- a/style.css
+++ b/style.css
@@ -72,7 +72,7 @@ header nav ul li {
     cursor: pointer;
     
 }
-.btn-contato button:hover{
+.btn-contato button:hover,form .btn-enviar input:hover{
     box-shadow: 0px 0px 15px rgb(118, 67, 199);
     transform: scale(1.05);
     transition: .2s;
@@ -242,9 +242,78 @@ section.portfolio{
 }
 section.portfolio .flex{
     justify-content: space-around;
+    margin-top: 40px;
 }
 .img-port{
     width: 360px;
     height: 460px;
     background-color: #7b31db;
+    background-size: cover;
+    background-position: 100% 0%;
+    transition: 7s;
+    border-radius: 30px;
+    cursor: pointer;
+    position: relative;
+}
+.img-port:hover{
+   background-position: 100% 100%; 
+}
+.overlay{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 100%;
+    background-color: #00000081;
+    border-radius: 30px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    font-size: 24px;
+    font-weight: 700;
+    color: white;
+    opacity: 0;
+    transition: .5s;
+}
+.overlay:hover{
+    opacity: 1;
+}
+/* ESTILO DO FORMULÁRIO DE CONTATO */
+section.formulario{
+    padding: 80px 4%;
+}
+form{
+    max-width: 500px;
+    margin: 0 auto;
+    display: flex;
+    justify-content: center;
+    flex-direction: column;
+    gap: 10px;
+    margin-top: 50px;
+}
+form input, form textarea{
+    border: 0;
+    width: 100%;
+    background-color: #1f1e1ec2;
+    outline: 0;
+    padding: 20px 15px;
+    border-radius: 10px;
+    color: white;
+    font-size: 18px;
+}
+form textarea{
+    resize: none;
+    max-height: 500px;
+}
+form .btn-enviar{
+    margin-top: 20px;
+    text-align: center;
+}
+form .btn-enviar input{
+    width: 120px;
+    background-color: #965ae4;
+    color: #000000;
+    font-weight: 700;
+    cursor: pointer;
+    transition: .2s;
 }
